# email-finder-mcp

./: .env.example  .gitignore  README.md  index.html  pyproject.toml  smithery.yaml  test_server.py
src/email_finder_mcp/: __init__.py  __main__.py  email_utils.py  rate_limiter.py  server.py
