[project]
name = "email-finder-mcp"
version = "1.0.0"
description = "Email Finder MCP Server - Find and verify email addresses"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "dnspython>=2.6.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
email-finder-mcp = "email_finder_mcp.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
